force-app/main/default/objects/ProviderSettings__c/ProviderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configure the credentials from Twilio and Meta</description>
    <label>ProviderSettings</label>
</CustomObject>