force-app/main/default/objects/ProviderSettings__c/fields/App_Secret_key__c.field-meta.xml
<CustomField>
    <fullName>App_Secret_key__c</fullName>
    <description>The App Secret key of your Meta developer App</description>
    <inlineHelpText>The App Secret key of your Meta developer App</inlineHelpText>
    <label>App Secret key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>