force-app/main/default/objects/ProviderSettings__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <description>The Application Id of your meta developer App</description>
    <inlineHelpText>The Application Id of your meta developer App</inlineHelpText>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>