force-app/main/default/objects/ProviderSettings__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <description>The Authorization token</description>
    <inlineHelpText>The Authorization token</inlineHelpText>
    <label>Auth Token</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>