force-app/main/default/objects/ProviderSettings__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>The Channel is either SMS or WhatsApp</description>
    <inlineHelpText>The Channel is either SMS or WhatsApp</inlineHelpText>
    <label>Channel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>