force-app/main/default/objects/ProviderSettings__c/fields/Messaging_Service_SID__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Service_SID__c</fullName>
    <description>The Messaging service SID of your Twilio Account</description>
    <inlineHelpText>The Messaging service SID of your Twilio Account</inlineHelpText>
    <label>Messaging Service SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>