force-app/main/default/objects/ProviderSettings__c/fields/Phone_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Id__c</fullName>
    <description>The Phone number Id from your meta developer App</description>
    <inlineHelpText>The Phone number Id from your meta developer App</inlineHelpText>
    <label>Phone Number Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>