force-app/main/default/objects/ProviderSettings__c/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <description>The Service Provider will be Twilio for SMS or Meta for WhatsApp</description>
    <inlineHelpText>The Service Provider will be Twilio for SMS or Meta for WhatsApp</inlineHelpText>
    <label>Service Provider Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>