force-app/main/default/objects/ProviderSettings__c/fields/Twilio_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Phone_Number__c</fullName>
    <description>The phone number from your Twilio Account</description>
    <inlineHelpText>Enter your Twilio Phone Number with country code (Eg: +18574435576)</inlineHelpText>
    <label>Twilio Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>