force-app/main/default/objects/ProviderSettings__c/fields/WhatsApp_Business_Id__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Business_Id__c</fullName>
    <description>Enter the WhatsApp Business Id from your Meta Developer App</description>
    <inlineHelpText>Enter the WhatsApp Business Id from your Meta Developer App</inlineHelpText>
    <label>WhatsApp Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>